@@ -1,5 +1,5 @@
 Apache Nutch
-Copyright 2012 The Apache Software Foundation
+Copyright 2014 The Apache Software Foundation
 
 This product includes software developed by The Apache Software
 Foundation (http://www.apache.org/).
