@@ -134,7 +134,8 @@
 </property>
 
 <property>
-  <value>Nutch-1.8-SNAPSHOT</value>
+  <name>http.agent.version</name>
+  <value>Nutch-1.9-SNAPSHOT</value>
   <description>A version string to advertise in the User-Agent 
    header.</description>
 </property>
