@@ -14,9 +14,9 @@
 # limitations under the License.
 
 name=apache-nutch
-version=1.8-SNAPSHOT
+version=1.9-SNAPSHOT
 final.name=${name}-${version}
-year=2013
+year=2014
 
 basedir = ./
 src.dir = ./src/java
